# open-broadcast-encoder

./: .cmake-skill-manifest.json  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
.agents/skills/gsdd-audit-milestone/: SKILL.md
.agents/skills/gsdd-complete-milestone/: SKILL.md
.agents/skills/gsdd-execute/: SKILL.md
.agents/skills/gsdd-map-codebase/: SKILL.md
.agents/skills/gsdd-new-project/: SKILL.md
.agents/skills/gsdd-pause/: SKILL.md
.agents/skills/gsdd-plan/: SKILL.md
.agents/skills/gsdd-plan-milestone-gaps/: SKILL.md
.agents/skills/gsdd-progress/: SKILL.md
.agents/skills/gsdd-quick/: SKILL.md
.agents/skills/gsdd-resume/: SKILL.md
.agents/skills/gsdd-verify/: SKILL.md
.kilocode/: mcp.json
.kilocode/rules/: rules.md
.kilocode/rules-architect/: AGENTS.md
.kilocode/rules-ask/: AGENTS.md
.kilocode/rules-code/: AGENTS.md
.kilocode/rules-debug/: AGENTS.md
.kilocode/skills/cmake-skill/: .gitignore  SKILL.md
.kilocode/skills/cmake-skill/references/: protocol.md
.kilocode/skills/cmake-skill/scripts/: cmake-skill
.opencode/agents/: gsdd-approach-explorer.md  gsdd-plan-checker.md
.opencode/commands/: gsdd-audit-milestone.md  gsdd-complete-milestone.md  gsdd-execute.md  gsdd-map-codebase.md  gsdd-new-milestone.md  gsdd-new-project.md  gsdd-pause.md  gsdd-plan-milestone-gaps.md  gsdd-plan.md  gsdd-progress.md  gsdd-quick.md  gsdd-resume.md  gsdd-verify-work.md  gsdd-verify.md
.planning/: config.json  generation-manifest.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  STACK.md
.planning/quick/: LOG.md
.planning/quick/001-fix-ui-log-thread-safety/: 001-PLAN.md
.planning/quick/002-fix-bitrate-stoi-validation/: 002-PLAN.md  002-SUMMARY.md
.planning/quick/003-fix-buffer-distributor-nop-deleter/: 003-PLAN.md  003-SUMMARY.md
.planning/templates/: agents.block.md  agents.md  approach.md  auth-matrix.md  roadmap.md  spec.md
.planning/templates/brownfield-change/: CHANGE.md  HANDOFF.md  VERIFICATION.md
.planning/templates/codebase/: architecture.md  concerns.md  conventions.md  stack.md
.planning/templates/delegates/: approach-explorer.md  mapper-arch.md  mapper-concerns.md  mapper-quality.md  mapper-tech.md  plan-checker.md  researcher-architecture.md  researcher-features.md  researcher-pitfalls.md  researcher-stack.md  researcher-synthesizer.md
.planning/templates/research/: architecture.md  features.md  pitfalls.md  stack.md  summary.md
.planning/templates/roles/: DISTILLATION.md  approach-explorer.md  debugger.md  executor.md  integration-checker.md  mapper.md  planner.md  researcher.md  roadmapper.md  synthesizer.md  verifier.md
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
docs/: BIDIRECTIONAL_MESSAGE_PASSING_ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  UI_BACKEND_INTERFACE.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.vue  main.ts  quasar-variables.sass
frontend/src/api/: encoder.ts  index.ts  ndi.ts  streams.ts
frontend/src/components/: CodecControls.vue  InputSelector.vue  LogViewer.vue  MenuBar.vue  OutputManager.vue  StatsDashboard.vue
frontend/src/composables/: useEvents.ts
frontend/src/stores/: configStore.ts  encoderStore.ts  logStore.ts  ndiStore.ts  statsStore.ts
frontend/src/types/: encoder.ts  events.ts
include/: common.h
plans/: rist-transcoder-architecture.md
source/: common.h  lib.cpp  lib.hpp  main.cpp  test.cxx  test.fld  test.h  ui.cxx  ui.fld  ui.h
source/encode/: CMakeLists.txt  encode.cpp  encode.cppm  encode.h
source/encoder_wrapper/: CMakeLists.txt  encoder_wrapper.cpp  encoder_wrapper.h
source/lib/: CMakeLists.txt  lib.cpp  lib.cppm  lib.h
source/ndi_input/: CMakeLists.txt  ndi_input.cpp  ndi_input.cppm  ndi_input.h
source/stats/: CMakeLists.txt  statistics_aggregator.cpp  statistics_aggregator.h  stats.cpp  stats.cppm  stats.h
source/transport/: CMakeLists.txt  buffer_distributor.cpp  buffer_distributor.h  rist_transport.cpp  rist_transport.h  rtmp_transport.cpp  rtmp_transport.h  srt_transport.cpp  srt_transport.h  transport.cpp  transport.cppm  transport.h  transport_base.cpp  transport_base.h  transport_manager.cpp  transport_manager.h
source/ui/: CMakeLists.txt  add_output_dialog.cpp  add_output_dialog.h  output_stream_widget.cpp  output_stream_widget.h  ui.cpp  ui.cppm  ui.cxx  ui.fld  ui.h  ui_func.cxx
source/url/: CMakeLists.txt  url.cc  url.h
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  events.rs  ffi.rs  lib.rs  main.rs  state.rs
test/: CMakeLists.txt
test/source/: open-broadcast-encoder_test.cpp
